crates/zizmor/tests/integration/snapshots/integration__snapshot__github_env-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"github-env/github-path.yml\")).run()?"
snapshot_kind: text
---
error[github-env]: dangerous use of environment file
  --> @@INPUT@@:17:9
   |
17 | /         run: |
18 | |           message=$(echo "$TITLE" | grep -oP '[{\[][^}\]]+[}\]]' | sed 's/{\|}\|\[\|\]//g')
19 | |           echo "$message" >> $GITHUB_PATH
   | |__________________________________________^ write to GITHUB_PATH may allow code execution
   |
   = note: audit confidence → Low

2 findings (1 ignored): 0 unknown, 0 informational, 0 low, 0 medium, 1 high
