crates/zizmor/tests/integration/snapshots/integration__snapshot__insecure_commands-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 330
expression: "zizmor().input(input_under_test(\"insecure-commands.yml\")).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
error[insecure-commands]: execution of insecure workflow commands is enabled
  --> @@INPUT@@:15:5
   |
15 | /     env:
16 | |       ACTIONS_ALLOW_UNSECURE_COMMANDS: true
   | |___________________________________________^ insecure commands enabled here
   |
   = note: audit confidence → High
   = note: this finding has an auto-fix

2 findings (1 suppressed, 1 fixable): 0 informational, 0 low, 0 medium, 1 high
