crates/zizmor/tests/integration/snapshots/integration__snapshot__obfuscation-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 824
expression: "zizmor().input(input_under_test(\"obfuscation/issue-1177-repro.yml\")).args([\"--persona=pedantic\"]).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
No findings to report. Good job!
