crates/zizmor/tests/integration/snapshots/integration__snapshot__overprovisioned_secrets.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"overprovisioned-secrets.yml\")).run()?"
snapshot_kind: text
---
warning[overprovisioned-secrets]: excessively provisioned secrets
  --> @@INPUT@@:15:18
   |
15 |           stuff: ${{ format('{0}', toJSON(secrets)) }}
   |                  ------------------------------------- injects the entire secrets context into the runner
   |
   = note: audit confidence → High

warning[overprovisioned-secrets]: excessively provisioned secrets
  --> @@INPUT@@:24:25
   |
24 |           secrets_json: ${{ toJSON(secrets) }}
   |                         ---------------------- injects the entire secrets context into the runner
   |
   = note: audit confidence → High

3 findings (1 ignored): 0 unknown, 0 informational, 0 low, 2 medium, 0 high
