crates/zizmor/tests/integration/snapshots/integration__snapshot__ref_confusion.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
expression: "zizmor().input(input_under_test(\"ref-confusion.yml\")).offline(false).run()?"
---
warning[ref-confusion]: git ref for action with ambiguous ref type
  --> @@INPUT@@:11:9
   |
11 |       - uses: woodruffw/gha-hazmat/ref-confusion@confusable
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ uses a ref that's provided by both the branch and tag namespaces
   |
   = note: audit confidence → High

error[unpinned-uses]: unpinned action reference
  --> @@INPUT@@:11:9
   |
11 |       - uses: woodruffw/gha-hazmat/ref-confusion@confusable
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ action is not pinned to a hash (required by blanket policy)
   |
   = note: audit confidence → High

3 findings (1 suppressed): 0 unknown, 0 informational, 0 low, 1 medium, 1 high
