crates/zizmor/tests/integration/snapshots/integration__snapshot__self_hosted-2.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 109
expression: "zizmor().input(input_under_test(\"self-hosted.yml\")).run()?"
---
group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
No findings to report. Good job! (1 suppressed)
