crates/zizmor/tests/integration/snapshots/integration__snapshot__self_hosted-3.snap
---
source: crates/zizmor/tests/integration/snapshot.rs
assertion_line: 111
expression: "zizmor().input(input_under_test(\"self-hosted/self-hosted-runner-label.yml\")).args([\"--persona=auditor\"]).run()?"
---
warning[self-hosted-runner]: runs on a self-hosted runner
  --> @@INPUT@@:11:5
   |
11 |     runs-on: [self-hosted, linux, arm64]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ self-hosted runner used here
   |
   = note: audit confidence → High

help[concurrency-limits]: insufficient job-level concurrency limits
 --> @@INPUT@@:4:1
  |
4 | name: self-hosted-runner-label
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing concurrency setting
  |
  = note: audit confidence → High

2 findings: 0 informational, 1 low, 1 medium, 0 high
